--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node ./src/main.ts",
     "start:watch": "nodemon",
     "build": "tsc",
+    "start:prod": "npm run build | node build/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,11 +24,15 @@
   },
   "homepage": "https://github.com/bernas670/scriptsheet#readme",
   "devDependencies": {
+    "@types/parsimmon": "^1.10.6",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "nodemon": "^2.0.15",
     "parsimmon": "^1.18.0",
+    "process": "^0.11.10",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10",
     "ts-node": "^10.4.0"
   }
 }
