--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "outDir": "./build",
       "rootDir": "./src",
-      "target": "es5",
+      "target": "esnext",
       "lib": [
         "dom",
         "dom.iterable",
@@ -16,11 +16,12 @@
       "strict": true,
       "forceConsistentCasingInFileNames": true,
       "noFallthroughCasesInSwitch": true,
-      "module": "esnext",
+      "module": "commonjs",
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "typeRoots": [
-          "./src/@types"
+          "./src/@types",
+          "./node_modules/@types"
       ]
     },
     "include": [
