Fixed and improved cell dependencies cycle check

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/bernas670/scriptsheet.git"
   },
   "keywords": [
-    "spreasheet"
+    "spreadsheet"
   ],
   "author": "",
   "license": "ISC",
