--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
       "outDir": "./build",
       "rootDir": "./src",
       "target": "esnext",
+      "sourceMap": true,
       "lib": [
         "dom",
         "dom.iterable",
