--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     },
     "include": [
       "src/*.ts",
-      "src/@types/*.ts"
+      "src/@types/*.ts",
+      "src/utils/set.ts"
     ],
     "watchOptions": {
       // Use native file system events for files and directories
